src/objects/TextBlockItem__c.object
<CustomObject>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <referenceTo>Category__c</referenceTo>
        <relationshipLabel>Text Block Category Assignments</relationshipLabel>
        <relationshipName>Categories</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <label>Subject</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TextBlockName__c</fullName>
        <label>Text Block Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TextBlock__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Text Block</label>
        <referenceTo>TextBlock__c</referenceTo>
        <relationshipLabel>Text Block Items</relationshipLabel>
        <relationshipName>Text_Block_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Text Block Item</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>TBI-{000000000}</displayFormat>
        <label>Text Block Item</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>